  * Implemented feature to speedup the enumeration of table names
    (Miroslav).
  * Extended old '--dump -C' functionality to be able to search for
    specific database(s), table(s) and column(s), --search switch
    (Bernardo).
  * Added support to fetch unicode data (Bernardo and Miroslav).
  * Added support for SOAP based web services requests (Bernardo).
  * Added safe URL feature, --safe-url and --safe-freq (Miroslav).
  * Added --use-between switch to use BETWEEN syntax in inferencial
    statement and bypass firewalls filtering '>' character (Bernardo and
    Miroslav).
  * Support for customizable HTTP redirections (Bernardo).
  * Several bugs fixed (Bernardo and Miroslav).
  * Major code refactoring (Bernardo and Miroslav).
  * User's manual updated (Bernardo).

 -- Bernardo Damele A. G. <bernardo.damele@gmail.com>  Day, DD MMM 2010 10:00:00 +0000

sqlmap (0.8-1) stable; urgency=low

  * Support to enumerate and dump all databases' tables containing user
    provided column(s) by specifying for instance '--dump -C user,pass'.
    Useful to identify for instance tables containing custom application
    credentials (Bernardo).
  * Support to parse -C (column name(s)) when fetching
    columns of a table with --columns: it will enumerate only columns like
    the provided one(s) within the specified table (Bernardo).
  * Support for takeover features on PostgreSQL 8.4 (Bernardo).
  * Enhanced --priv-esc to rely on new Metasploit Meterpreter's
    'getsystem' command to elevate privileges of the user running the
    back-end DBMS instance to SYSTEM on Windows (Bernardo).
  * Automatic support in --os-pwn to use the web uploader/backdoor to
    upload and execute the Metasploit payload stager when stacked queries
    SQL injection is not supported, for instance on MySQL/PHP and
    MySQL/ASP, but there is a writable folder within the web server
    document root (Bernardo and Miroslav).