@@ -85,6 +85,9 @@ aCred =
 # Syntax: key_file,cert_file
 aCert = 
 
+# Use persistent HTTP(s) connections
+keepAlive = False
+
 # Use a HTTP proxy to connect to the target url.
 # Syntax: http://address:port
 proxy = 
